--- a/src/main/resources/com/example/projekt_z_javy/hello-view.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/hello-view.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.projekt_z_javy.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TextField layoutX="285.0" layoutY="188.0" />
+      <TextField layoutX="285.0" layoutY="235.0" />
+      <Label layoutX="214.0" layoutY="192.0" text="Name" />
+      <Label layoutX="213.0" layoutY="239.0" text="E-mail" />
+      <Label layoutX="205.0" layoutY="286.0" text="Password" />
+      <PasswordField layoutX="285.0" layoutY="282.0" />
+      <Button layoutX="325.0" layoutY="333.0" mnemonicParsing="false" text="Zatwierdz" />
+   </children>
+</Pane>
