--- a/src/main/resources/com/example/projekt_z_javy/hello-view.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/hello-view.fxml
@@ -6,15 +6,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.Controller">
    <children>
-      <TextField layoutX="285.0" layoutY="188.0" />
-      <TextField layoutX="285.0" layoutY="235.0" />
+      <TextField fx:id="name" layoutX="285.0" layoutY="188.0" />
+      <TextField fx:id="email" layoutX="285.0" layoutY="235.0" />
       <Label layoutX="214.0" layoutY="192.0" text="Name" />
       <Label layoutX="213.0" layoutY="239.0" text="E-mail" />
       <Label layoutX="205.0" layoutY="286.0" text="Password" />
-      <PasswordField layoutX="285.0" layoutY="282.0" />
-      <Button layoutX="325.0" layoutY="333.0" mnemonicParsing="false" text="Zatwierdz" />
+      <PasswordField fx:id="password" layoutX="285.0" layoutY="282.0" />
+      <Button fx:id="submitButton" layoutX="325.0" layoutY="333.0" mnemonicParsing="false" onAction="#getData" text="Zatwierdz" />
    </children>
 </Pane>
