--- a/src/main/resources/com/example/projekt_z_javy/login-view.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/login-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
@@ -13,10 +14,11 @@
       <TextField fx:id="name" layoutX="57.0" layoutY="107.0" promptText="Login or email" />
       <Button fx:id="zalogujButton" layoutX="57.0" layoutY="239.0" mnemonicParsing="false" onAction="#userLogIn" text="Zaloguj" />
       <Button fx:id="rejestracjaButton" layoutX="131.0" layoutY="239.0" mnemonicParsing="false" onAction="#userSignUp" text="Rejestracja" />
-      <Text layoutX="65.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zaloguj się!">
+      <Text layoutX="64.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zaloguj się!">
          <font>
             <Font name="Arial" size="26.0" />
          </font>
       </Text>
+      <Label fx:id="problem" layoutX="117.0" layoutY="77.0" textAlignment="CENTER" textFill="RED" />
    </children>
 </Pane>
