--- a/src/main/resources/com/example/projekt_z_javy/lobby-view.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/lobby-view.fxml
@@ -1,8 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.LobbyView">
-
-</AnchorPane>
+<Pane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.LobbyView">
+   <children>
+      <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Strona główna">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="303.0" prefWidth="353.0">
+                     <children>
+                        <Button layoutX="60.0" layoutY="105.0" mnemonicParsing="false" text="Dodaj rezerwację" />
+                        <Button layoutX="60.0" layoutY="175.0" mnemonicParsing="false" text="Edytuj rezerwację" />
+                        <Button layoutX="60.0" layoutY="245.0" mnemonicParsing="false" text="Wyświetl moje rezerwacje" />
+                        <Button fx:id="wylogujButton" layoutX="510.0" layoutY="330.0" mnemonicParsing="false" onAction="#userLogout" text="Wyloguj" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Dodaj rezerwację">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button layoutX="440.0" layoutY="330.0" mnemonicParsing="false" text="Zapisz" />
+                        <Button layoutX="520.0" layoutY="330.0" mnemonicParsing="false" text="Zakończ" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+            <Tab text="Edytuj rezerwację">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button layoutX="440.0" layoutY="330.0" mnemonicParsing="false" text="Zapisz" />
+                        <Button layoutX="520.0" layoutY="330.0" mnemonicParsing="false" text="Zakończ" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Moje rezerwacje">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button layoutX="440.0" layoutY="330.0" mnemonicParsing="false" text="Zapisz" />
+                        <Button layoutX="520.0" layoutY="330.0" mnemonicParsing="false" text="Zakończ" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </children>
+</Pane>
