--- a/src/main/resources/com/example/projekt_z_javy/login.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/login.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.LoginController">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #0598ff;" BorderPane.alignment="CENTER" />
    </left>
@@ -26,13 +22,13 @@
                   <Font size="14.0" />
                </font>
             </PasswordField>
-            <Button layoutX="60.0" layoutY="275.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" style="-fx-background-color: #0598ff;" text="Zaloguj" textFill="WHITE" />
+            <Button fx:id="log_button" layoutX="60.0" layoutY="275.0" mnemonicParsing="false" onAction="#handleButtonPressed" prefHeight="30.0" prefWidth="70.0" style="-fx-background-color: #0598ff;" text="Zaloguj" textFill="WHITE" />
             <Label contentDisplay="CENTER" layoutX="77.0" layoutY="96.0" prefHeight="42.0" prefWidth="150.0" text="LOGOWANIE" textAlignment="CENTER" textFill="#0598ff">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <Button layoutX="176.0" layoutY="275.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #0598ff;" text="Zarejestruj" textFill="WHITE" />
+            <Button fx:id="reg_button" layoutX="176.0" layoutY="275.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #0598ff;" text="Zarejestruj" textFill="WHITE" />
             <FontAwesomeIcon fill="#0598ff" glyphName="USERS" layoutX="134.0" layoutY="81.0" size="35" />
             <FontAwesomeIcon fill="#0598ff" glyphName="USER" layoutX="36.0" layoutY="183.0" size="20" />
             <FontAwesomeIcon fill="#0598ff" glyphName="KEY" layoutX="35.0" layoutY="238.0" size="20" />
