--- a/src/main/resources/com/example/projekt_z_javy/login.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/login.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.LoginController">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #0598ff;" BorderPane.alignment="CENTER" />
    </left>
@@ -32,6 +36,7 @@
             <FontAwesomeIcon fill="#0598ff" glyphName="USERS" layoutX="134.0" layoutY="81.0" size="35" />
             <FontAwesomeIcon fill="#0598ff" glyphName="USER" layoutX="36.0" layoutY="183.0" size="20" />
             <FontAwesomeIcon fill="#0598ff" glyphName="KEY" layoutX="35.0" layoutY="238.0" size="20" />
+            <FontAwesomeIcon fill="#0589ff" glyphName="CLOSE" layoutX="260.0" layoutY="34.0" size="22" />
          </children>
       </AnchorPane>
    </center>
