--- a/src/main/resources/com/example/projekt_z_javy/login.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/login.fxml
@@ -36,7 +36,8 @@
             <FontAwesomeIcon fill="#0598ff" glyphName="USERS" layoutX="134.0" layoutY="81.0" size="35" />
             <FontAwesomeIcon fill="#0598ff" glyphName="USER" layoutX="36.0" layoutY="183.0" size="20" />
             <FontAwesomeIcon fill="#0598ff" glyphName="KEY" layoutX="35.0" layoutY="238.0" size="20" />
-            <FontAwesomeIcon fill="#0589ff" glyphName="CLOSE" layoutX="260.0" layoutY="34.0" size="22" />
+            <Button layoutX="239.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="14.0" style="-fx-background-color: transparent;" />
+            <FontAwesomeIcon fill="#0589ff" glyphName="CLOSE" layoutX="259.0" layoutY="32.0" size="22" />
          </children>
       </AnchorPane>
    </center>
