--- a/src/main/resources/com/example/projekt_z_javy/register.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/register.fxml
@@ -41,8 +41,16 @@
                </font>
             </TextField>
             <FontAwesomeIcon fill="#0598ff" glyphName="AT" layoutX="35.0" layoutY="236.0" size="22" />
-            <FontAwesomeIcon fill="#0598ff" glyphName="ARROW_LEFT" layoutX="14.0" layoutY="37.0" size="22" text="" />
-            <FontAwesomeIcon fill="#0598ff" glyphName="CLOSE" layoutX="268.0" layoutY="37.0" size="22" />
+            <Button layoutX="250.0" layoutY="17.0" mnemonicParsing="false" style="-fx-background-color: transparent;">
+               <graphic>
+                  <FontAwesomeIcon fill="#0598ff" glyphName="CLOSE" size="22" />
+               </graphic>
+            </Button>
+            <Button layoutX="17.0" layoutY="17.0" mnemonicParsing="false" style="-fx-background-color: transparent;">
+               <graphic>
+                  <FontAwesomeIcon fill="#0598ff" glyphName="ARROW_LEFT" size="22" text="" />
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
    </center>
