--- a/src/main/resources/com/example/projekt_z_javy/register.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/register.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #0598ff;" BorderPane.alignment="CENTER" />
    </left>
@@ -21,25 +17,25 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <PasswordField layoutX="76.0" layoutY="267.0" promptText="Hasło użytkownika" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </PasswordField>
-            <Label contentDisplay="CENTER" layoutX="77.0" layoutY="89.0" prefHeight="42.0" prefWidth="168.0" text="REJESTRACJA" textAlignment="CENTER" textFill="#0598ff">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <Button layoutX="106.0" layoutY="318.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #0598ff;" text="Zarejestruj" textFill="WHITE" />
-            <FontAwesomeIcon fill="#0598ff" glyphName="USER" layoutX="36.0" layoutY="183.0" size="22" />
-            <FontAwesomeIcon fill="#0598ff" glyphName="LOCK" layoutX="36.0" layoutY="291.0" size="25" />
-            <FontAwesomeIcon fill="#0598ff" glyphName="USER_PLUS" layoutX="144.0" layoutY="74.0" size="30" />
             <TextField layoutX="75.0" layoutY="215.0" prefHeight="26.0" prefWidth="175.0" promptText="E-mail użytkownika" style="-fx-background-color: TRANSPARENT; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
+            <PasswordField layoutX="76.0" layoutY="267.0" promptText="Hasło użytkownika" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </PasswordField>
+            <Button layoutX="106.0" layoutY="318.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #0598ff;" text="Zarejestruj" textFill="WHITE" />
+            <Label contentDisplay="CENTER" layoutX="77.0" layoutY="89.0" prefHeight="42.0" prefWidth="168.0" text="REJESTRACJA" textAlignment="CENTER" textFill="#0598ff">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <FontAwesomeIcon fill="#0598ff" glyphName="USER" layoutX="36.0" layoutY="183.0" size="22" />
+            <FontAwesomeIcon fill="#0598ff" glyphName="LOCK" layoutX="36.0" layoutY="291.0" size="25" />
+            <FontAwesomeIcon fill="#0598ff" glyphName="USER_PLUS" layoutX="144.0" layoutY="74.0" size="30" />
             <FontAwesomeIcon fill="#0598ff" glyphName="AT" layoutX="35.0" layoutY="236.0" size="22" />
             <Button layoutX="250.0" layoutY="17.0" mnemonicParsing="false" style="-fx-background-color: transparent;">
                <graphic>
