--- a/src/main/resources/com/example/projekt_z_javy/lobbyHistory.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/lobbyHistory.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.TableViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.TableViewController">
    <children>
       <BorderPane layoutX="218.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -36,22 +41,22 @@
                <children>
                   <VBox layoutX="50.0" layoutY="70.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #0598ff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <JFXButton prefHeight="70.0" prefWidth="200.0" text="Dodaj rezerwację" textFill="WHITE">
+                        <JFXButton onAction="#addReservation" prefHeight="70.0" prefWidth="200.0" text="Dodaj rezerwację" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton prefHeight="70.0" prefWidth="200.0" text="Usuń rezerwację" textFill="WHITE">
+                        <JFXButton onAction="#deleteReservation" prefHeight="70.0" prefWidth="200.0" text="Usuń rezerwację" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton prefHeight="70.0" prefWidth="200.0" text="Moje rezerwacje" textFill="WHITE">
+                        <JFXButton onAction="#myReservation" prefHeight="70.0" prefWidth="200.0" text="Moje rezerwacje" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton prefHeight="70.0" prefWidth="200.0" text="Button4" textFill="WHITE">
+                        <JFXButton onAction="#otherReservation" prefHeight="70.0" prefWidth="200.0" text="Button4" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
