--- a/src/main/resources/com/example/projekt_z_javy/lobbyHistory_v2.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/lobbyHistory_v2.fxml
@@ -77,16 +77,16 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <TableView fx:id="rezTable" layoutX="84.0" layoutY="79.0" prefHeight="200.0" prefWidth="500.0" style="-fx-background-color: #c9c4c4;">
-                    <columns>
-                      <TableColumn fx:id="idCol" prefWidth="100.0" style="-fx-background-color: #0598ff;" text="ID" />
-                      <TableColumn fx:id="idPok" prefWidth="100.0" style="-fx-background-color: #0598ff;" text="POKOJ" />
-                        <TableColumn fx:id="idUs" prefWidth="100.0" style="-fx-background-color: #0598ff;" text="UZYTKOWNIK" />
-                        <TableColumn fx:id="idGodz" prefWidth="100.0" style="-fx-background-color: #0598ff;" text="GODZINY" />
-                        <TableColumn fx:id="dateCol" prefWidth="100.0" style="-fx-background-color: #0598ff;" text="DATA" />
-                    </columns>
-                  </TableView>
                   <Button layoutX="282.0" layoutY="32.0" mnemonicParsing="false" onAction="#setArray" text="Odswiez tabelke" />
+                  <TableView fx:id="rezTable" layoutX="109.0" layoutY="108.0" prefHeight="200.0" prefWidth="500.0">
+                     <columns>
+                        <TableColumn fx:id="idCol" prefWidth="100.0" text="ID" />
+                        <TableColumn fx:id="idPok" prefWidth="100.0" text="POKOJ" />
+                        <TableColumn fx:id="idUs" prefWidth="100.0" text="UZYTKOWNIK" />
+                        <TableColumn fx:id="idGodz" prefWidth="100.0" text="GODZINY" />
+                        <TableColumn fx:id="dateCol" prefWidth="100.0" text="DATA" />
+                     </columns>
+                  </TableView>
                </children>
             </AnchorPane>
          </center>
