--- a/src/main/resources/lobbyAddRoomAdmin.fxml
+++ b/src/main/resources/lobbyAddRoomAdmin.fxml
@@ -4,108 +4,106 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mainApp.LobbyController">
-    <children>
-        <BorderPane layoutX="218.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <top>
-                <AnchorPane prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label fx:id="MenuClose" layoutX="32.0" layoutY="20.0" text="MENU" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="20.0" />
-                            </font>
-                            <graphic>
-                                <FontAwesomeIcon fill="WHITE" glyphName="LIST" />
-                            </graphic>
-                        </Label>
-                        <Label fx:id="Menu" layoutX="32.0" layoutY="20.0" text="MENU" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="20.0" />
-                            </font>
-                            <graphic>
-                                <FontAwesomeIcon fill="WHITE" glyphName="LIST" />
-                            </graphic>
-                        </Label>
-                    </children>
-                </AnchorPane>
-            </top>
-            <left>
-                <AnchorPane fx:id="slider" prefHeight="470.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <VBox layoutX="50.0" layoutY="70.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #0598ff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                            <children>
-                                <JFXButton prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #0000CD;" text="Pokoje" textFill="WHITE" underline="true">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
-                                <JFXButton prefHeight="55.0" prefWidth="200.0" text="Dodaj " textFill="WHITE">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
-                                <JFXButton prefHeight="55.0" prefWidth="200.0" text="Edytuj" textFill="WHITE">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
-                                <JFXButton contentDisplay="TOP" prefHeight="70.0" prefWidth="200.0" ripplerFill="WHITE" style="-fx-background-color: #0000CD;" text="Rezerwacje" textFill="WHITE" underline="true">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
-                                <JFXButton prefHeight="55.0" prefWidth="200.0" text="Wyświetl" textFill="WHITE">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
-                                <JFXButton prefHeight="55.0" prefWidth="200.0" text="Anuluj" textFill="WHITE">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
-                                <JFXButton prefHeight="70.0" prefWidth="200.0" text="Kontakt" textFill="WHITE">
-                                    <font>
-                                        <Font name="System Bold" size="18.0" />
-                                    </font>
-                                </JFXButton>
+<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mainApp.AdminAddController">
+   <children>
+      <BorderPane layoutX="218.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <AnchorPane prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="MenuClose" layoutX="32.0" layoutY="20.0" text="MENU" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <graphic>
+                        <FontAwesomeIcon fill="WHITE" glyphName="LIST" />
+                     </graphic>
+                  </Label>
+                  <Label fx:id="Menu" layoutX="32.0" layoutY="20.0" text="MENU" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <graphic>
+                        <FontAwesomeIcon fill="WHITE" glyphName="LIST" />
+                     </graphic>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </top>
+         <left>
+            <AnchorPane fx:id="slider" prefHeight="470.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <VBox layoutX="50.0" layoutY="70.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #0598ff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <JFXButton prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: #0000CD;" text="Pokoje" textFill="WHITE" underline="true">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton onAction="#addRoom" prefHeight="28.0" prefWidth="200.0" text="Dodaj " textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton onAction="#editRoom" prefHeight="30.0" prefWidth="200.0" text="Edytuj" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton contentDisplay="TOP" prefHeight="65.0" prefWidth="200.0" ripplerFill="WHITE" style="-fx-background-color: #0000CD;" text="Rezerwacje" textFill="WHITE" underline="true">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton onAction="#showReservations" prefHeight="10.0" prefWidth="200.0" text="Wyświetl" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton onAction="#cancelReservation" prefHeight="30.0" prefWidth="200.0" text="Anuluj" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton onAction="#contactAdmin" prefHeight="65.0" prefWidth="200.0" text="Kontakt" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
                         <AnchorPane prefHeight="110.0" prefWidth="200.0">
                            <children>
-                              <Button layoutX="73.0" layoutY="40.0" mnemonicParsing="false" onAction="#exit" style="-fx-background-color: transparent;">
+                              <Button layoutX="73.0" layoutY="58.0" mnemonicParsing="false" onAction="#exit" style="-fx-background-color: transparent;">
                                  <graphic>
                                     <FontAwesomeIcon fill="WHITE" glyphName="SIGN_OUT" size="40" wrappingWidth="55.54284858703613" />
                                  </graphic>
                               </Button>
                            </children>
                         </AnchorPane>
-                            </children>
-                        </VBox>
-                    </children>
-                </AnchorPane>
-            </left>
-            <center>
-                <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <AnchorPane layoutX="67.0" layoutY="46.0" prefHeight="203.0" prefWidth="286.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
-                            <children>
-                                <Label layoutX="35.0" layoutY="30.0" text="Podaj nazwę pokoju:">
-                                    <font>
-                                        <Font name="System Bold" size="14.0" />
-                                    </font>
-                                </Label>
-                                <TextField layoutX="27.0" layoutY="72.0" prefHeight="30.0" prefWidth="225.0" />
-                                <Button fx:id="ButtonAddRoom" layoutX="172.0" layoutY="151.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Dodaj pokój" />
-                            </children>
-                        </AnchorPane>
-                    </children>
-                </AnchorPane>
-            </center>
-        </BorderPane>
-    </children>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </left>
+         <center>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="labelName" layoutX="37.0" layoutY="24.0" text="Witaj">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font></Label>
+                  <Label layoutX="37.0" layoutY="78.0" prefHeight="124.0" prefWidth="665.0" text="Aplikacja JustBooked służy do rezerwacji pokoi. &#10;&#10;Możesz tu zarządzać pokojami (dodawać i edytować) oraz rezerwacjami (wyświetlać i usuwać). &#10;">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="511.0" layoutY="70.0" text="ADD ROOMS" />
+               </children>
+            </AnchorPane>
+         </center>
+      </BorderPane>
+   </children>
 </AnchorPane>
