--- a/src/main/resources/lobbyEditRoomAdmin.fxml
+++ b/src/main/resources/lobbyEditRoomAdmin.fxml
@@ -3,7 +3,9 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -91,16 +93,27 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="labelName" layoutX="37.0" layoutY="24.0" text="Witaj">
-                     <font>
-                        <Font name="System Bold Italic" size="18.0" />
-                     </font></Label>
-                  <Label layoutX="37.0" layoutY="78.0" prefHeight="124.0" prefWidth="665.0" text="Aplikacja JustBooked służy do rezerwacji pokoi. &#10;&#10;Możesz tu zarządzać pokojami (dodawać i edytować) oraz rezerwacjami (wyświetlać i usuwać). &#10;">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="511.0" layoutY="70.0" text="EDIT ROOMS" />
+                  <AnchorPane layoutX="394.0" layoutY="177.0" prefHeight="182.0" prefWidth="284.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="32.0" layoutY="37.0" text="Wpisz nową nazwę:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="32.0" layoutY="78.0" prefHeight="26.0" prefWidth="219.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="59.0" layoutY="42.0" prefHeight="182.0" prefWidth="284.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="35.0" layoutY="30.0" text="Wybierz pokój:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <ChoiceBox layoutX="35.0" layoutY="77.0" prefHeight="26.0" prefWidth="220.0" style="-fx-background-color: #FFFFFF;" />
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="ButtonEditRoom" layoutX="264.0" layoutY="375.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Akceptuj" />
                </children>
             </AnchorPane>
          </center>
