--- a/src/main/resources/lobbyEditRoomAdmin.fxml
+++ b/src/main/resources/lobbyEditRoomAdmin.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mainApp.AdminEditController">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mainApp.AdminEditController">
    <children>
       <BorderPane layoutX="218.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -110,10 +105,10 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <ChoiceBox layoutX="35.0" layoutY="77.0" prefHeight="26.0" prefWidth="220.0" style="-fx-background-color: #FFFFFF;" />
+                        <ChoiceBox fx:id="choiceBox_list" layoutX="35.0" layoutY="77.0" prefHeight="26.0" prefWidth="220.0" style="-fx-background-color: #FFFFFF;" />
                      </children>
                   </AnchorPane>
-                  <Button fx:id="ButtonEditRoom" layoutX="264.0" layoutY="375.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Akceptuj" />
+                  <Button fx:id="buttonEditRoom" layoutX="264.0" layoutY="375.0" mnemonicParsing="false" onAction="#pressedButton" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Akceptujjje" />
                </children>
             </AnchorPane>
          </center>
