--- a/src/main/resources/lobbyAddRoomAdmin.fxml
+++ b/src/main/resources/lobbyAddRoomAdmin.fxml
@@ -99,8 +99,8 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Button fx:id="ButtonAddRoom" layoutX="170.0" layoutY="190.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Dodaj pokój" />
-                        <TextField layoutX="40.0" layoutY="96.0" prefHeight="26.0" prefWidth="222.0" />
+                        <Button fx:id="ButtonAddRoom" layoutX="170.0" layoutY="190.0" mnemonicParsing="false" onAction="#addRoomToDB" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Dodaj pokój" />
+                        <TextField fx:id="roomName_textFiled" layoutX="40.0" layoutY="96.0" prefHeight="26.0" prefWidth="222.0" />
                      </children>
                   </AnchorPane>
                </children>
